# procuvita-backend

./: .gitignore  Cargo.toml
src/: main.rs  mod.rs
src/actors/: manager.rs  message.rs  mod.rs  user_actor.rs
src/routes/: actor_routes.rs  admin_routes.rs  mod.rs  task_routes.rs
src/services/: mod.rs  pinecone.rs  supabase.rs
supabase/: config.toml
supabase/migrations/: 20250127023030_update-schema.sql
tests/: integration_test.rs
