[package]
name = "procuvita-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix = "0.13.5"
reqwest = { version = "0.12.12", features = ["json"] }
uuid = { version = "1.12.0", features = ["v4"] }
